Translate Apache Fory 1.6.0 release content